format and checkJs

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,17 @@
 {
   "compilerOptions": {
-      "baseUrl": "./",
-      "paths": {
-          "three-webc/*" : ["*"]
-      }
-  }
+    "checkJs": true,
+    "baseUrl": "./",
+    "paths": {
+      "three-webc/*": [
+        "*"
+      ],
+      "three/addons/*": [
+        "node_modules/three/examples/jsm/*"
+      ]
+    }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
