--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "threejs",
     "webgl"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yellow-digital/three-webc.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "author": "Jelle",
   "license": "ISC",
   "devDependencies": {
